# RealTime_Audio_Translator

./: .env.example  .gitignore  1.py  README.md  pyproject.toml  readme.md  rs_1.py  rt_1.py  rt_1_rus.py  rt_2.py  rt_3.py  rt_4.py  rt_4_cached.py  rt_5.py  rt_6.py  rt_SPEECHMATICS_1.py  rt_SPEECHMATICS_2.py  rt_not_fast.py
