[tool.poetry]
name = "sub-realtime-translator"
version = "0.1.0"
description = "Realtime translator from english (audio) to russian (text)"
authors = ["Vadim Medintsev <m8adimka@gmail.com>"]
package-mode = false          # ← Это ключевая строка! Отключает "пакетный" режим

[tool.poetry.dependencies]
python = ">=3.11,<3.15"       # или ">=3.11" — у вас сейчас 3.14, это нормально
python-dotenv = "^1.0"
websockets = "^12.0"
httpx = "^0.27"
aiohttp = "^3.9"              # если используете, оставьте; иначе удалите

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"